--- a/src/client/components/user-info/user-info.css
+++ b/src/client/components/user-info/user-info.css
@@ -12,18 +12,37 @@ img {
     margin-top: 40px;
 }
 
+.user-info_photo {
+    margin-right: 60px;
+}
+
 .user-info__connections {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+
 }
 
-.user-info__statistics {
+.user-info {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: space-between;
 }
 
 .user-name {
     font-weight: bold;
+    margin-bottom: 7px;
+}
+
+.user-info__statistics {
+    width: 230px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.settings-pic {
+    width: 30px;
+    height: 30px;
 }
