--- a/src/client/components/app/app.css
+++ b/src/client/components/app/app.css
@@ -33,3 +33,39 @@
         }
     }
 }
+
+.filestack {
+    display: none;
+}
+
+.mimg {
+    width: 150px;
+}
+
+
+/* ///////// */
+
+.input-hidden {
+    position: absolute;
+    left: -9999px;
+  }
+  
+  input[type=radio]:checked + label>img {
+    border: 1px solid #fff;
+    box-shadow: 0 0 3px 3px rgb(0, 0, 0);
+  }
+  
+  /* Stuff after this is only to make things more pretty */
+  input[type=radio] + label>img {
+    border: 1px dashed #444;
+    width: 150px;
+    height: 150px;
+    transition: 500ms all;
+  }
+  
+  input[type=radio]:checked + label>img {
+    transform: 
+      rotateZ(-10deg) 
+      rotateX(10deg);
+  }
+  
